--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <body>
     <h1>About</h1>
     <p>
-      This site is a sample project for the <strong>awsome</strong> Git tutorial <em>Learn Enought™ Git to Be Dangrous</em>.
+      This site is a sample project for the <strong>awsome</strong> Git tutorial <a href="http://learnenough.com/git-tutorial"><em>Learn Enought™ Git to Be Dangrous</em></a>.
     </p>
   </body>
 </html>
